@@ -1,7 +1,7 @@
 <configure xmlns="http://namespaces.zope.org/zope"
            i18n_domain="icemac.addressbook">
 
-  <adapter factory=".token.fromExporter" />
+  <adapter factory=".sources.fromExporter" />
 
   <include package=".xls" />
 
