@@ -15,9 +15,12 @@ class IExporter(zope.interface.Interface):
         u'Extension (without the leading dot!) to be set on export file name.')
     mime_type = zope.interface.Attribute(u'Mime-type of the export file.')
 
-    def export(*persons):
-        """Export the `persons` to a file.
+    def export():
+        """Export to a file.
 
         Returns a file or file-like-object.
 
         """
+
+    def __eq__(other):
+        """Checks whether two instances have the same class."""
